# te_pai

./: .gitignore  README.md  pyproject.toml  setup.py
bench/: test_benchmark.py
examples/: main.py  noisy.ipynb  plot.ipynb  qc_main.py  test.ipynb  trotter.ipynb
qc/: __init__.py  sampling.py  simulator.py  te_pai.py  trotter.py
te_pai/: __init__.py  hamil.py  observable.py  sampling.py  simulator.py  te_pai.py  trotter.py
te_pai/backend/: __init__.py  qiskit.py  qulacs.py
te_pai_qc/: pai.py
test/: benchmark.py  test_hamil.py  test_noisy.py  test_observable.py
