[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "te_pai"
version = "0.1.0"
description = "A project for te_pai"
authors = ["Author Name <author@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.2.4"
scipy = "^1.15.2"
qiskit = "^2.0.0"
qiskit-aer = "^0.17.0"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"

