[project]
name = "te_pai"
version = "0.1.0"
description = "A project for te_pai"
authors = [{ name = "Author Name", email = "author@example.com" }]
requires-python = "~=3.10"
license = "MIT"
dependencies = [
    "numpy>=2.2.4,<3",
    "scipy>=1.15.2,<2",
    "qiskit>=2.0.0,<3",
    "qiskit-aer>=0.17.0,<0.18",
    "numba>=0.61.2,<0.62",
    "pandas>=2.2.3,<3",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
test = ["pytest>=8.3.5,<9"]
bench = ["pytest-benchmark>=5.1.0,<6"]

[tool.uv]
default-groups = [
    "test",
    "bench",
]

