[project]
name = "te_pai"
version = "0.1.0"
description = "A project for te_pai"
authors = [{ name = "Author Name", email = "author@example.com" }]
requires-python = "~=3.10"
license = "MIT"
dependencies = [
    "numpy>=2.2.5,<3",
    "scipy>=1.15.3,<2",
    "qiskit>=2.0.0,<3",
    "qiskit-aer>=0.17.0,<0.18",
    "numba>=0.61.2,<0.62",
    "pandas>=2.2.3,<3",
    "qulacs>=0.6.11",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
dev-dependencies = [
  "jupyter>=1.1.1,<2",
  "matplotlib>=3.10.3,<4",
  "pytest>=8.3.5,<9",
  "pytest-benchmark>=5.1.0,<6",
  "ruff>=0.11.9",
]


[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]


ignore = [
    "E501",  # line too long, handled by black
    "E731",
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "W191",  # indentation contains tabs
    "B904", # raise ... from ... 
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]


[tool.ruff.lint.isort]
known-third-party = ["fastapi", "pydantic", "starlette"]

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

